update services.sh